project/styles/styles.css
:root {
    --primary-color: #8ad7ee;
    --secondary-color: #FFFFFF;
    --text-color: #061318;
    --contrast-color: #f78424;
}

body {
    margin: 0;
    padding: 2rem;
    background-color: var(--primary-color);
}

header {
    background: var(--secondary-color);
    color: var(--text-color);
    padding: 10px 0;
    text-align: center;
}

a {
    color: var(--contrast-color);
    text-decoration: none;
    font-weight: bold;
}

a:hover {
    background-color: var(--contrast-color);
    color: var(--secondary-color);
    padding: 1rem 0 1rem 0;

}

/* Typography  */

h1, h2, h3, h4, h5, h6 {
    color: var(--text-color);
    font-family: 'Nunito Sans', sans-serif;
}

p, li{
    color: var(--text-color);
    font-family: 'Roboto Mono', sans-serif;
}

a {
    color: var(--contrast-color);
    font-family: 'Prompt', sans-serif;
    text-decoration: none;
    font-weight: bold;
}

